# ps4-ftp-client

./: CMakeLists.txt  README.md
data/assets/langs/: Arabic.ini  Romanian.ini  Turkish.ini
source/: actions.cpp  actions.h  config.h  fs.cpp  fs.h  ftpclient.cpp  ftpclient.h  ime_dialog.cpp  imgui_impl_sdl.cpp  lang.cpp  lang.h  main.cpp  remote_client.h  windows.cpp  windows.h
